kubernetes/apps/apps/matrix/synapse/apps/webui/deployment-cinny.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name cinny-web
  labels:
    app: *name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
        - image: ghcr.io/cinnyapp/cinny:v4.10.2
          imagePullPolicy: IfNotPresent
          name: *name
          readinessProbe:
            tcpSocket:
              port: 80
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '3000Mi'
              cpu: '2500m'
          # volumeMounts:
          #   - mountPath: /app/config.json
          #     name: element-config
          #     subPath: config.json
      restartPolicy: Always
      # volumes:
      #   - name: element-config
      #     configMap:
      #       name: element-config
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: element-default
#   labels:
#     app: element-default
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: element-default
#   template:
#     metadata:
#       labels:
#         app: element-default
#     spec:
#       containers:
#         - image: vectorim/element-web:v1.11.40
#           imagePullPolicy: IfNotPresent
#           name: element-web-default
#           readinessProbe:
#             tcpSocket:
#               port: 80
#           resources:
#             requests:
#               memory: '1Mi'
#               cpu: '1m'
#             limits:
#               memory: '3000Mi'
#               cpu: '2500m'
#           volumeMounts:
#             - mountPath: /app/config.json
#               name: element-config-bare
#               subPath: config.json
#       restartPolicy: Always
#       volumes:
#         - name: element-config-bare
#           configMap:
#             name: element-config-bare
