kubernetes/apps/apps/matrix/synapse/apps/webui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name element-web
  labels:
    app: *name 
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: element-web
  type: LoadBalancer
