kubernetes/apps/apps/matrix/synapse/apps/webui/deployment-element-new.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name element-web-new
  labels:
    app: *name
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
        - name: *name
          # image: vectorim/element-web:latest
          image: vectorim/element-web:v1.12.9
        # image: vectorim/element-web:v1.11.40
          command: ["/bin/sh"]
          args:
            - "-c"
            - sleep infinity
            - |
              cat /app/config.json | gzip > /app/config.json.gz && \
              exec nginx -g "daemon off;"
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      volumes:
        - name: element-config
          configMap:
            name: element-config
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: &name element-web-new
  labels:
    app: *name
spec:
  ports:
    - port: 80
      # protocol: TCP
      # targetPort: 80
  selector:
    app: element-web-new
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app matrix-ingress-new
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
spec:
  ingressClassName: traefik-external
  rules:
    - host: element-new.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element-web-new
                port:
                  number: 80
  tls:
  - hosts:
      - element-new.cloud.icylair.com
    secretName: icylair-com-all-prod
