kubernetes/apps/apps/matrix/synapse/apps/webui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app matrix-ingress
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
spec:
  ingressClassName: traefik-external
  rules:
    - host: element.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-element
                port:
                  number: 80
    - host: element.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-element
                port:
                  number: 80
    # - host: cinny.icylair.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: cinny-web
    #             port:
    #               number: 80
    # - host: cinny.cloud.icylair.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: cinny-web
    #             port:
    #               number: 80
    # - host: element.cloud.icylair.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: element-default
    #             port:
    #               number: 80
  tls:
  - hosts:
      - element.icylair.com
      - element.cloud.icylair.com
      # - cinny.icylair.com
      # - cinny.cloud.icylair.com
    secretName: icylair-com-all-prod
